--- a/45965-h/45965-h.htm
+++ b/45965-h/45965-h.htm
@@ -11,17 +11,12 @@
 
 <link rel="coverpage" href="images/cover.jpg" />
 <style type="text/css">
-
 body {margin-left: 10%; margin-right: 10%;}
-
 h1,h2,h3 {text-align: center; line-height: 1.5; font-weight: normal;}
-
 h1 {font-size: 250%; margin-top: 2em; letter-spacing: .1em;}
 h2 {font-size: 135%; margin-top: 4em; page-break-before: always;}
 h3 {font-size: 110%; margin-top: 2em; page-break-after: avoid;}
-
 p {text-indent: 1em; text-align: justify; margin-top: 0.75em; margin-bottom: 0.75em;}
-
 .centered   {text-align: center; text-indent: 0;}
 .editor     {line-height: 1.5; letter-spacing: .1em;}
 .fontlarge  {font-size: 135%;}
@@ -33,22 +28,18 @@ p {text-indent: 1em; text-align: justify; margin-top: 0.75em; margin-bottom: 0.7
 .noindent   {text-indent: 0;}
 .signature  {text-align: right; margin-right: 2em; text-indent: 0; margin-bottom: 1.5em; page-break-before: avoid;}
 .smcaps     {font-variant: small-caps;}
-
 .poetry-container {text-align: center; margin-top: 1em;}
 .poetry           {display: inline-block; text-align: left;}
 @media handheld {.poetry {display: block; margin-left: 2.5em;}}
 .stanza           {line-height: 1.3; font-size: 90%; margin-bottom: 0.7em; page-break-inside: avoid;}
 .verse            {text-align: left;}
 .verseright       {text-align: right;}
-
 .tnote {
   padding: 10px;
   background: rgb(220, 220, 220) none repeat scroll 0% 50%;
   page-break-before: always;
   }
-
 a[title].pagenum {position: absolute; right:3%;}
-
 a[title].pagenum:after {
   content: attr(title);
   border: 1px solid silver;
@@ -65,7 +56,6 @@ a[title].pagenum:after {
   text-indent: 0;
   letter-spacing: 0;
 }
-
 </style>
 </head>
 
@@ -6212,3 +6202,4 @@ subscribe to our email newsletter to hear about new eBooks.
 </pre>
 
 </body>
+</html>
